--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body {
     padding-top : 50px;
 }
 
+
+
 .canvas{
     width: 500px;
     height: 500px;
@@ -18,6 +20,11 @@ body {
 
 .controls {
     margin-top: 80px;
+    text-align: center;
+}
+
+.controls .controls__range{
+    padding-bottom: 20px;
 }
 
 .controls .controls__btns{
